--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cypress:open": "cypress open",
     "newRun": "cypress run --env allure=true",
-    "html-report": "cypress run"
+    "html-report": "cypress run",
+    "cyp_report": "cypress run --e2e"
   },
   "author": "",
   "license": "ISC",
